--- a/public/css/helper.css
+++ b/public/css/helper.css
@@ -140,3 +140,11 @@ select {
     font-size: 60px !important;
     color: white;
 }
+
+.transparente{
+    background-color: rgba(255, 255, 255, 0) !important;
+}
+
+.inicio-page{
+    top: 0 !important
+}
