--- a/public/css/helper.css
+++ b/public/css/helper.css
@@ -182,3 +182,14 @@ select {
 .card-body-container{
     position: relative !important;
 }
+
+.div-previsualizar{
+    width: 100%;
+    overflow: hidden;
+}
+
+.div-previsualizar img{
+    height: auto;
+    max-width: 100%;
+}
+
