--- a/public/css/helper.css
+++ b/public/css/helper.css
@@ -120,12 +120,6 @@ select {
     border-radius: 0 0 25px 25px;
 }
 
-.carrucel-container {
-    width: 100%;
-    margin: 0 auto;
-    text-align: center;
-}
-
 .div-carrucel{
     padding: 0 0 20px 20px;
 }
@@ -189,7 +183,20 @@ select {
 }
 
 .div-previsualizar img{
-    height: auto;
-    max-width: 100%;
+    height: 200px;
+    max-width: auto !important;
 }
 
+.img-category-list{
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    overflow: hidden;
+}
+
+#map{
+    min-height: 70vh;
+}
